# pystates3

./: .gitignore  README.md  pyproject.toml
examples/trafficlight/src/trafficlight/: constants.py  main.py  states.py
src/: state.py
src/state/: __init__.py  state.py
state/: state.py
test/: test.py  test_state.py
