[tool.poetry]
name = "pystates3"
version = "0.1.0"
description = "State aware system implemented in python"
authors = ["Jaschar Domann <jasjisdo@gmail.com>"]
license = "Apache License 2.0"
homepage = "https://github.com/jasjisdo/pystates3"

packages = [
    { include="state", from="./src" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
